# wgpu-mm

./: Cargo.toml  README.md  gemm.wgsl  metal_matmul.py  scratch  unchecked
msl_out/: gemm3.msl  gemm3_fma.msl
shaders/: bram.wgsl  bram8x8.wgsl  chonk.wgsl  chonk2.wgsl  gemm2.wgsl  gemm3.wgsl  gemm_macro.wgsl
shaders/gemm/: bram.wgsl  gemm3_fma.wgsl  gemm_1.wgsl  gemm_1v.wgsl  gemm_2.wgsl  gemm_3.wgsl  gemm_3v.wgsl  gemm_4.wgsl  gemm_5.wgsl  gemm_6.wgsl  gemm_7.wgsl  tfjs.wgsl
shaders/gemv/: gemv.wgsl  qgemv_1.wgsl
shaders/kernels/: kernel_1.wgsl  kernel_2.wgsl  kernel_3.wgsl  kernel_4.wgsl
src/: gemm.rs  gemv.rs  harness.rs  lib.rs  main.rs  quant.rs  workload.rs
